--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -13,7 +14,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "sass": "^1.86.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "thenby": "1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
