--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "sass": "^1.86.3",
-    "web-vitals": "^2.1.4",
-    "thenby": "1.3.4"
+    "thenby": "1.3.4",
+    "uuid": "^11.1.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
